<resources>
    <string name="app_name">Agenda Panaderia</string>

    <!--Main Activity-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>
    <!--Actividad Registro-->
    <string name="CrearCuenta">Crear una cuenta</string>
    <string name="NombreEt">Nombres</string>
    <string name="CoreoEt">Correo electronico</string>
    <string name="Contrasena">Contraseña</string>
    <string name="ConfirmarContrasena">Confirmar Contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="Tengounacuenta">Tengo una cuenta</string>

    <!--    Actividad Login-->
    <string name="IniciarS">Iniciar Sesion</string>
    <string name="CorreoL">Correo electronico</string>
    <string name="PasswordL">Contraseña</string>
    <string name="Btn_LoginI">Ingresar</string>
    <string name="UsuarioNuevo">No Tienes una Cuenta?. Registrate</string>

    <!--    MENU PRINCIPAL-->
    <string name="BienvenidoP">Bienvenido(a)</string>\
    <string name="IdMenu"> -- </string>
    <string name="NombreP"> -- </string>
    <string name="CorreoP"> -- </string>
    <string name="Verificacion">No Verificado</string>
    <string name="ListaOp">Menu Opciones</string>
    <string name="AgregarPedidos">Agregar</string>
    <string name="ListaPedidos">Lista Pedidos</string>
    <string name="Importantes">Importantes</string>
    <string name="Contactos">Contactos</string>
    <string name="CerrarC">Cerrar Sesion</string>

    <!--    MENU -->
    <string name="Agregar_Pedido_BD">Agregar</string>
    <string name="Actualizar_Pedido_BD">Actualizar</string>
    <string name="Vaciar_Todos_Los_Pedidos">Vaciar todos los pedidos</string>
    <string name="Perfil_usuario">Perfil Usuario</string>
    <string name="Actualizar_pass">Actualizar pass</string>
    <string name="Agregar_Contacto">Agregar Contactos</string>

    <!--        AGREGAR PEDIDOS-->
    <string name="id_Usuario">Id del Usuario</string>
    <string name="Correo_usuario">Correo del Usuario</string>
    <string name="Fecha_H_A">Fecha de Registro</string>
    <string name="Fecha_Actual">Fecha y Hora Actual</string>
    <string name="Nombre_Cliente">Nombre del Cliente</string>
    <string name="Titulo">Titulo</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Btn_Calendario">Calendario</string>
    <string name="Fecha">00/00/0000</string>
    <string name="Estado">No Entregado</string>
    <string name="TextoR">Forma de entrega</string>
    <string name="Radio1">A Domicilio</string>
    <string name="Radio2">Local</string>

    <!--ACTUALIZAR CONTACTO-->
    <string name="Id_C_A"> -- </string>
    <string name="Uid_C_A"> -- </string>
    <string name="Nombres_C_A"> -- </string>
    <string name="Apellidos_C_A"> -- </string>
    <string name="Correo_C_A"> -- </string>
    <string name="Telefono_C_A"> -- </string>
    <string name="Edad_C_A"> -- </string>
    <string name="Direccion_C_A"> -- </string>
    <string name="Btn_Actualizar_C_A">Actualizar</string>


    <!--        ITEM PEDIDOS-->
    <string name="Id_Pedido_Item">Id nota</string>
    <string name="Id_Usuario_Item">Id del Usuario</string>
    <string name="Correo_Usuario_Item">Correo del Usuario</string>
    <string name="Fecha_Actual_Registro">Fecha y Hora Registro</string>
    <string name="Nombre_Cliente_Item">Nombre del Cliente</string>
    <string name="Titulo_Item">Titulo</string>
    <string name="Descripcion_Item">Descripcion</string>
    <string name="Fecha_Item">00/00/0000</string>
    <string name="Estado_Item">No Entregado</string>


    <!--        CUADRO DE DIALOGO-->
    <string name="ElijaOpcion">Elija una Opcion</string>
    <string name="CD_Eliminar">Eliminar</string>
    <string name="CD_Actualizar">Actualizar</string>

    <!--        DETALLE PEDIDO-->
    <string name="Id_Pedido_Detalle_Txt">Id del Pedido: </string>
    <string name="Id_Pedido_Detalle">Id Pedido</string>

    <string name="Id_Usuario_Detalle_Txt">Id del Usuario: </string>
    <string name="Id_Usuario_Detalle">Id Usuario</string>

    <string name="Correo_Usuario_Detalle_Txt">Correo del Usuario: </string>
    <string name="Correo_Usuario_Detalle">Correo Usuario</string>

    <string name="Nombre_Detalle_Txt">Cliente: </string>
    <string name="Nombre_Detalle">Cliente</string>

    <string name="Titulo_Detalle_Txt">Titulo: </string>
    <string name="Titulo_Detalle">Titulo</string>

    <string name="Descripcion_Detalle_Txt">Descripcion: </string>
    <string name="Descripcion_Detalle">Descripcion</string>

    <string name="Fecha_Registro_Detalle_Txt">Fecha de Registro: </string>
    <string name="Fecha_Registro_Detalle">Fecha Registro</string>

    <string name="Fecha_Pedido_Detalle_Txt">Fecha del Pedido: </string>
    <string name="Fecha_Pedido_Detalle">Fecha Pedido</string>

    <string name="Estado_Detalle_Txt">Estado del Pedido: </string>
    <string name="Estado_Detalle">Estado</string>

    <string name="Btn_Importante">Importante</string>


    <!--items contacto-->

    <string name="Id_c_Item">Id contacto</string>
    <string name="Uid_c_Item">Id usuario</string>
    <string name="nombre_c_Item">Nombre</string>
    <string name="apellido_c_Item">Apellido</string>
    <string name="Correo_c_Item">Correo </string>
    <string name="telefono_c_Item">Telefono</string>
    <string name="direccion_c_Item">Dirección</string>

    <!--    Agregar contacto-->

    <string name="Id_Usuario">Mi Id</string>
    <string name="Nombre_c">Nombre</string>
    <string name="Apellido_c">Apellido</string>
    <string name="Correo_c">Correo </string>
    <string name="Telefono_c">Telefono</string>
    <string name="Direccion_c">Dirección</string>
    <string name="Btn_guardar_contacto">Guardar contactos</string>


    <!--    CUADRO DE DIALOGO ESTABLECER TELEFONO-->
    <string name="Establecer_Telefono">Escriba su telefono</string>
    <string name="Btn_Aceptar_Telefono">Aceptar</string>

    <!---SPINNER - ESTADO-->
    <string-array name="Estados_Pedido">
        <item>"No finalizado"</item>
        <item>"Finalizado"</item>
    </string-array>

    <!--DETALLE PEDIDOS-->
    <string name="Id_Pedido_Detalle_TXT">Id del Pedido: </string>
    <string name="Id_pedido_Detalle">Id Pedido</string>
    <string name="Uid_usuario_Detalle_TXT">Uid de usuario: </string>
    <string name="Uid_usuario_Detalle">Uid usuario</string>
    <string name="Correo_usuario_Detalle_TXT">Correo de usuario: </string>
    <string name="Correo_usuario_Detalle">Correo usuario</string>
    <string name="Titulo_Detalle_TXT">Título: </string>
    <string name="Titulo_Detalles">Título</string>
    <string name="Descripcion_Detalle_TXT">Descripción: </string>
    <string name="Descripcion_Detalles">Descripcion</string>
    <string name="Fecha_registro_Detalle_TXT">Fecha de registro: </string>
    <string name="Fecha_Registro_Detalles">Fecha registro</string>
    <string name="Fecha_Pedido_Detalle_TXT">Fecha Pedido: </string>
    <string name="Fecha_Pedido_Detalles">Fecha Pedido</string>
    <string name="Estado_Detalle_TXT">Estado del Pedido: </string>
    <string name="Estado_Detalles">Estado</string>
    <string name="Boton_Importante">Importante</string>

    <!--ACTUALIZAR PEDIDO-->
    <string name="Id_pedido_A">Id pedido</string>
    <string name="Uid_Usuario_A"> Uid del usuario</string>
    <string name="Correo_usuario_A">Correo de usuario</string>
    <string name="Fecha_registro_A">Fecha de registro</string>
    <string name="Titulo_A"> Título </string>
    <string name="Descripcion_A"> Descripcion</string>
    <string name="Btn_Calendario_A">Calendario</string>
    <string name="Fecha_A"> 00/00/0000 </string>
    <string name="Estado_A"> No finalizado</string>
    <string name="Estado_nuevo"> -- </string>

    <!--ITEM PEDIDOS IMPORTANTE-->
    <string name="Id_pedido_Item_I">Id pedido</string>
    <string name="Uid_Usuario_Item_I"> Uid del usuario</string>
    <string name="Correo_usuario_Item_I">Correo de usuario</string>
    <string name="Fecha_hora_registro_Item_I">Fecha y hora registro</string>
    <string name="Titulo_Item_I"> Título </string>
    <string name="Descripcion_Item_I"> Descripcion</string>
    <string name="Fecha_Item_I"> 00/00/0000 </string>
    <string name="Estado_Item_I"> No finalizado</string>

    <!--CUADRO DE DIÁLOGO - FILTRAR NOTAS-->
    <string name="FiltroTXT">Filtrar pedidos: </string>
    <string name="Todas_notas">Todos</string>
    <string name="Notas_Finalizadas">Finalizadas</string>
    <string name="Notas_No_Finalizadas">No Finalizadas</string>

    <!--DETALLE CONTACTO-->
    <string name="DetalleContactoTXT">Detalle del contacto</string>
    <string name="Id_C_D"> -- </string>
    <string name="Uid_Usuario_D"> -- </string>
    <string name="Nombre_C_D"> -- </string>
    <string name="Apellidos_C_D"> -- </string>
    <string name="Correo_C_D"> -- </string>
    <string name="Telefono_C_D"> -- </string>
    <string name="Direccion_C_D"> -- </string>
    <string name="Llamar_C">Llamar</string>
    <string name="Mensaje_C">Mensaje</string>

</resources>

