<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/md_orange_400">

<androidx.appcompat.widget.LinearLayoutCompat android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center">
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="nota.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        />
    <TextView
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="@font/font"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Btn_Login"
        android:text="@string/Btn_Login"
        android:fontFamily="@font/font"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/md_orange_800"
        />
    <Button
        android:id="@+id/Btn_Registro"
        android:text="@string/Btn_Registro"
        android:fontFamily="@font/font"
        android:layout_marginTop="5dp"
        android:layout_width="250dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/md_orange_800"
        />
</androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>